--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Home Page</title>
+    <title>Grazi Programas</title>
 </head>
 <body>
-    <h1>Home Page</h1>
+    <h1>Grazi Programas</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem soluta ex exercitationem, placeat alias eveniet quasi unde, necessitatibus, repellendus neque hic sit minima quos quidem dolore at aut. Eius, dolor?</p>
 </body>
 </html>
